<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HPV Racer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_settings">Settings</string>
    <string name="button_dragRace">Drag Race</string>
    <string name="button_enduranceRace">Endurance Race</string>
    <string name="button_endRace">End Race</string>
    <string name="button_clearSettings">Clear Race and Rider Settings</string>
    <string name="button_getCloudData">View Race Data on Cloud Storage</string>
    <string name="button_updateLapLength">Update Lap Length</string>
    <string name="edit_message">Set lap length, IN MILES</string>
    <string name="button_aboutUs">About HPV Racer</string>
    <string name="title_activity_main">HPV Racer</string>
    <string name="title_activity_drag_race">Drag Race</string>
    <string name="title_activity_settings">SETTINGS</string>
    <string name="title_activity_endurance_race">Endurance Race</string>
    <string name="title_race_selector">Which Race?</string>
    <string name="subTitle_current_settings">Current Rider/Race Settings</string>
    <string name="subTitle_lap_length">Current Endurance Race Lap Length</string>
    <string name="speed">--</string>
    <string name="cadence">--</string>
    <string name="time">--:--</string>
    <string name="speed_units">mph</string>
    <string name="cadence_units">rpm</string>
    <string name="title_activity_cloud_race_data">Race Data from Cloud Storage</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_local_race_data">Race Data on Local Storage</string>

</resources>