
	<TableLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
	    android:id="@+id/dataTable"
	    style="@style/DragRace"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:stretchColumns="0,1" >
	  
	  <TableRow
	      style="@style/DragRaceTable"
	      android:layout_width="match_parent"
	      android:layout_height="match_parent" >
	      
	    <TextView
	        android:id="@+id/title"
	        style="@style/DragRaceData"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/title_activity_drag_race"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        tools:context=".DragRaceActivity" />
	    
	  </TableRow>
	  
	   <TableRow
	       style="@style/DragRaceTable"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent" >
	    
	    <!--  col 1 -->

		<TextView
		    android:id="@+id/speed_display"
		    style="@style/DragRaceData"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:text="@string/speed"
		    tools:context=".DragRaceActivity" />
		
		<!-- col 2 -->

	    <TextView
	        android:id="@+id/time_display"
	        style="@style/DragRaceData"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/time"
	        tools:context=".DragRaceActivity"
	        android:typeface="sans" />
	    
	   </TableRow>
	   
	   <TableRow
	       style="@style/DragRaceData"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent" >
	    
	    <!--  col 1 -->

   	    <TextView
   	        android:id="@+id/cadence_display"
   	        style="@style/DragRaceData"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:text="@string/cadence"
   	        tools:context=".DragRaceActivity" />
   	    
   	    <!--  col 2 -->

   	    <TextView
   	        style="@style/DragRaceData"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent" />
	         
	   </TableRow>

    <Button
        android:id="@+id/button_endRace"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:onClick="endRace"
        android:text="@string/button_endRace"
        android:width="10sp" />
	   
	</TableLayout>
	
	    		    