<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button 
        android:id="@+id/button_dragRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dragRace"
        android:layout_centerHorizontal="true"
        android:onClick="startDragRace" />
    
    <Button 
        android:id="@+id/button_enduranceRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enduranceRace"
        android:layout_below="@id/button_dragRace"
        android:layout_centerHorizontal="true"
        android:onClick="startEnduranceRace" />
    
    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:layout_below="@id/button_enduranceRace"
        android:layout_centerHorizontal="true"
        android:onClick="RestTest" />

</RelativeLayout>
